fix code wrap, #6

--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -706,6 +706,9 @@ td.code pre {
 td.gutter {
   padding-top: 3px;
 }
+code {
+  word-break: break-word;
+}
 
 /* --- Social media sharing section --- */
 
